--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;700&display=swap');
+
 /* USER VARIABLES SECTION */
 :root {
 	--purple: #4D328D;
@@ -21,11 +22,30 @@
 	margin: 0;
 	box-sizing: border-box;
 }
-::placeholder { color: #666; }
-::selection { background-color: var(--accent); color: #fff; }
-input, textarea { outline: none; }
-input:focus:required:invalid, textarea:focus:required:invalid { border-color: red; }
-input:required:valid, textarea:required:valid { border-color: green; }
+
+::placeholder {
+	color: #666;
+}
+
+::selection {
+	background-color: var(--accent);
+	color: #fff;
+}
+
+input,
+textarea {
+	outline: none;
+}
+
+input:focus:required:invalid,
+textarea:focus:required:invalid {
+	border-color: red;
+}
+
+input:required:valid,
+textarea:required:valid {
+	border-color: green;
+}
 
 body {
 	font-family: var(--userfont);
@@ -40,11 +60,18 @@ body {
 	background-repeat: no-repeat;
 	background-position: bottom right 10%;
 }
-.container{
+
+.container {
 	max-width: 90%;
 	margin: 0 auto;
-	height: 100vh;
+	/* height: 100vh; */
 	padding-top: 5%;
+	position: relative;
+	left: 0;
+	right: 0;
+	height: 100%;
+	max-height: 100vh;
+	overflow-y: auto;
 }
 
 /* USER STYLES */
@@ -52,49 +79,51 @@ body {
 	max-width: 100%;
 }
 
-.purple{
+.purple {
 	color: var(--purple);
 }
 
-.green{
+.green {
 	color: var(--green);
 }
 
-.logo{
+.logo {
 	width: 50%;
 }
 
-h1{
+h1 {
 	font-weight: bold;
 	font-size: calc(var(--index)*2.23);
 	line-height: 1.1;
 	margin: 4% 0 0;
 }
 
-.phone{
+.phone {
 	font-weight: bold;
 	text-decoration: none;
 	font-size: calc(var(--index)*3);
 }
 
-.primary-image{
+.primary-image {
 	display: block;
 	height: calc(var(--index)*30);
 	width: auto;
 	margin: auto
 }
 
-@media(max-width: 992px){
-	body{
+@media(max-width: 992px) {
+	body {
 		background-size: calc(var(--index)*30);
 		background-position: bottom 5% center;
 	}
-	.logo{
+
+	.logo {
 		width: 90%;
 	}
 }
-@media(max-width: 586px){
-	.logo{
+
+@media(max-width: 586px) {
+	.logo {
 		width: 100%;
 	}
 }
