--- a/css/main.css
+++ b/css/main.css
@@ -46,12 +46,15 @@ input:required:valid,
 textarea:required:valid {
 	border-color: green;
 }
-
+html{
+	height: 100%;
+}
 body {
 	font-family: var(--userfont);
 	font-size: var(--regular-text);
 	line-height: var(--lineheight);
 	color: var(--text);
+	height: 100%;
 	min-width: 320px;
 	position: relative;
 	overflow: hidden;
